# scalade-api

./: .gitignore  Makefile  README.md  dev_setup.sh  pyproject.toml  pytest.ini  setup.py
accounts/: admin.py  backends.py  forms.py  managers.py  models.py  urls.py  views.py
accounts/management/commands/: accounts_add.py
accounts/migrations/: 0001_initial.py  0002_auto_20210615_0907.py
api/: exceptions.py  urls.py
api/serializers/: __init__.py  accounts.py  auth.py  mixins.py  runtime.py  streams.py
api/views/: __init__.py  accounts.py  auth.py  mixins.py  runtime.py  streams.py
common/: api.py  base.py  contracts.py  exceptions.py  mixins.py  repositories.py  utils.py
docker/: Dockerfile-function  docker-compose_dev.yml
fixtures/: accounts.json  admin.json  all.json  function_instances.json  users.json  variables.json
fixtures/common/: groups.json  permissions.json
fixtures/dev/: admin.json  all.json  streams.json  workspaces.json
resources/api/: authid_signin.json  stream_random_names.json  workspace.json
resources/fixtures/: test_fixtures.json
rpc/: consumer.py  producer.py
rpc/config/: consumer.ini  producer.ini
scalade_api/: asgi.py  urls.py  views.py  wsgi.py
scripts/: dump_fixtures.sh  install.sh
settings/: __init__.py  common.py  dev.py  prod.py
streams/: admin.py  models.py  urls.py  views.py
streams/application/: handlers.py
streams/migrations/: 0001_initial.py
tests/: conftest.py  test_accounts.py  test_common.py  test_streams.py
tests/integration/: tests.py
tests/resources/k8s/: job.yml
tests/unit/: tests.py
(+23 files in other folders)
